# AffinityMCP

./: Cargo.toml  run-affinity-mcp.js
.cargo/: config.toml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-01_17-17-09Z-windows-compatibility-preparation.md
src/: main.rs  mcp.rs
src/tools/: affinity.rs  affinity_win.rs  canva.rs  mod.rs
