[package]
name = "affinity-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-based MCP server skeleton for Canva tooling with optional Affinity bridges."
repository = "https://example.com/your/repo"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# MCP JSON-RPC実装（stdio は main で実装 — 通知のみのリクエストで空行を出さない）
jsonrpc-core = "18"
tokio-util = { version = "0.7", features = ["codec"] }

# UUID生成用（Canvaスタブ実装）
uuid = { version = "1", features = ["v4", "serde"] }

# 非同期処理用
futures = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

